m10-fix the log in and js-jump problem, add the google map api for recent page.

--- a/xinya.wang/css/app.css
+++ b/xinya.wang/css/app.css
@@ -282,9 +282,9 @@ ul{
 
 /* - Recent-page - */
 #recent-page [data-role='main']{
-	background-image: url(../img/map.png);
+	/*background-image: url(../img/map.png);
 	background-position: center;
-	background-size: cover;
+	background-size: cover;*/
 }
 
 /* - Recent-page-header - */
@@ -1532,6 +1532,15 @@ footer ul{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+}
+
+
+.map{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
 }
 
 
